<resources>
    <string name="app_name">Agenda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nuevo_evento">NuevoEventoActivity</string>
    <string name="email">oscar.rodriguezbrea@gmail.com</string>
    <string name="title">Agenda</string>
    <string name="eventoNuevo">Nuevo evento</string>
    <string name="edicionEvento">Edición evento</string>
    <string name="nombreEvento">Nombre evento</string>
    <string name="fechaDesde">Fecha Desde</string>
    <string name="horaDesde">Hora Desde</string>
    <string name="fechaHasta">Fecha Hasta</string>
    <string name="horaHasta">Hora Hasta</string>
    <string name="serieTitle">Título</string>
    <string name="descriptionSerie">Descripción</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="campo_obligatorio">Campo obligatorio</string>
    <string name="atencion">Atención</string>
    <string name="nombreEventoObligatorio">Nombre del evento obligatorio</string>
    <string name="fechaDesdeObligatorio">Fecha desde obligatorio</string>
    <string name="horaDesdeObligatorio">Hora desde obligatorio</string>
    <string name="fechaHastaObligatorio">Fecha hasta obligatorio</string>
    <string name="horaHastaObligatorio">Hora hasta obligatorio</string>
    <string name="calendarioMes">Calendario mes</string>
    <string name="eventosDia">Eventos del día</string>
    <string name="noHayEventosDia">No hay eventos disponibles el</string>
    <string name="error">Error</string>
    <string name="pregunta_eliminar_evento">¿Desea eliminar el evento</string>
    <string name="err_unknown_event">Datos del evento desconocida</string>
    <string name="err_context_not_found">Contexto desconocido</string>
    <string name="err_recuperar_eventos_hoy">Se ha producido un error al recuperar los eventos del día</string>
    <string name="err_fecha_hasta_anterior_desde">La fecha hasta no puede ser anterior a la fecha desde</string>
    <string name="err_grabar_evento_bbdd">Error al grabar el evento en BBDD</string>
    <string name="err_editar_evento_bbdd">Error al editar el evento en BBDD</string>
    <string name="err_get_series_bbdd">Error al recuperar las series de TV de la BBDD</string>
    <string name="err_delete_evento">Se ha producido un error al eliminar el evento</string>
    <string name="err_serie_desconocida">Serie desconocida. Intentelo de nuevo.</string>
    <string name="err_editar_serie">Se ha producido un error al editar la serie</string>
    <string name="err_editar_serie_bbdd">Se ha producido un error al editar una serie</string>
    <string name="err_get_events_month">Error al recuperar los eventos de un mes</string>
    <string name="err_month_unknown">Mes desconocido</string>
    <string name="title_activity_nueva_serie">Nueva Serie</string>
    <string name="serie_grabada">La serie ha sido dada de alta correctamente</string>
    <string name="err_get_eventos_fechaactual">Se ha producido un error al recuperar los eventos de la fecha seleccionada</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_editar_evento">EditarEventoActivity</string>
    <string name="title_activity_nuevo_evento2">NuevoEvento2Activity</string>
</resources>